--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		 <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 		 <link class="favicon" rel="shortcut icon" href="../proyectoenero/img/Favicon.jpg">
-		<title>Tu mejor tienda</title>
+		<title>Tu tienda de siempre</title>
 
 		<!-- Google font -->
 		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
@@ -45,9 +45,10 @@
 			<div id="top-header">
 				<div class="container bg-secondary">
 					<ul class="header-links pull-left">
-						<li><a href="#"><i class="fa fa-phone"></i> +1-849-253-0641</a></li>
-						<li><a href="#"><i class="fa fa-envelope-o"></i> elvynmedina1993@gmail.com</a></li>
-						<li><a href="#"><i class="fa fa-map-marker"></i> Santo Domingo RD :)</a></li>
+						<li><a href="https://www.google.com/maps/place/Invivienda,+Santo+Domingo+Este/@18.5108094,-69.829225,15z/data=!3m1!4b1!4m5!3m4!1s0x8eaf865bacfdecab:0xc239ee6608c3e2b9!8m2!3d18.5107216!4d-69.8210243" target="_blank"><i class="fa fa-map-marker"></i>Santo Domingo Este</a></li>
+						<li><a href="#"><i class="fa fa-phone"></i>1-849-253-0641</a></li>
+						<li><a href="https://outlook.live.com/mail/0/inbox" target="_blank"><i class="fa fa-envelope-o"></i>elvynmedina1993@gmail.com</a></li>
+
 					</ul>
 					<ul class="header-links pull-right">
 						<li><a href="#"><i class="fa fa-dollar"></i> RD</a></li>
@@ -1029,9 +1030,9 @@
 								<h3 class="footer-title">Acerca</h3>
 								<p>Proyecto final para enero,programación front-end con platilla Bootstrap</p>
 								<ul class="footer-links">
-									<li><a href="#"><i class="fa fa-map-marker"></i>Santo Domingo Este</a></li>
+									<li><a href="https://www.google.com/maps/place/Invivienda,+Santo+Domingo+Este/@18.5108094,-69.829225,15z/data=!3m1!4b1!4m5!3m4!1s0x8eaf865bacfdecab:0xc239ee6608c3e2b9!8m2!3d18.5107216!4d-69.8210243" target="_blank"><i class="fa fa-map-marker"></i>Santo Domingo Este</a></li>
 									<li><a href="#"><i class="fa fa-phone"></i>1-849-253-0641</a></li>
-									<li><a href="#"><i class="fa fa-envelope-o"></i>elvynmedina1993@gmail.com</a></li>
+									<li><a href="https://outlook.live.com/mail/0/inbox" target="_blank"><i class="fa fa-envelope-o"></i>elvynmedina1993@gmail.com</a></li>
 								</ul>
 							</div>
 						</div>
